Created new version logic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>ImageSize plugin</title>
-        <link rel="stylesheet" href="/dist/styles/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         <img size-src="http://test.dev/image.jpg"
@@ -12,6 +11,7 @@
              height="500"
         style="max-width: 100%; height: auto;">
 
-        <script src="/dist/js/build.js"></script>
+        <script src="/dist/build.js"></script>
+
     </body>
 </html>
