--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
              height="500"
         style="max-width: 100%; height: auto;">
 
-        <script src="/dist/build.js"></script>
+        <script src="/dist/build/build.js"></script>
 
     </body>
 </html>
