Created new version using es2015

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>ImageSize plugin</title>
     </head>
     <body>
-        <img size-src="http://dryeyemedia.dev/images/picjumbo.com_HNCK8749.jpg"
+        <img size-src="http://test.dev/images/test_image.jpg"
              resize="true"
              width="4000"
              height="2667"
@@ -15,11 +15,11 @@
         <div class="img-background"
             width="4000"
             height="2667"
-            size-src="http://dryeyemedia.dev/images/picjumbo.com_HNCK8749.jpg" 
+            size-src="http://test.dev/images/test_image.jpg" 
             style="
                 width:50%;
                 padding-bottom:100%;
-                background-image: url( http://dryeyemedia.dev/images/picjumbo.com_HNCK8749.jpg );
+                background-image: url( http://test.dev/images/test_image.jpg );
                 background-size: cover;
                 background-color: gray;
                 ">
