Fixed gulp --production error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>ImageSize plugin</title>
     </head>
     <body>
-        <img size-src="http://test.dev/images/test_image.jpg"
+        <img size-src="http://homestead.app/storage/uploads/images/13b81407796cd029faca1b0dc56f7506.jpeg"
              resize="true"
              width="4000"
              height="2667"
@@ -15,17 +15,17 @@
         <div class="img-background"
             width="4000"
             height="2667"
-            size-src="http://test.dev/images/test_image.jpg" 
+            size-src="http://homestead.app/storage/uploads/images/13b81407796cd029faca1b0dc56f7506.jpeg" 
             style="
                 width:50%;
                 padding-bottom:100%;
-                background-image: url( http://test.dev/images/test_image.jpg );
+                background-image: url( http://homestead.app/storage/uploads/images/13b81407796cd029faca1b0dc56f7506.jpeg );
                 background-size: cover;
                 background-color: gray;
                 ">
         </div>
 
-        <script src="/dist/build/build.js"></script>
+        <script src="/dist/js/app.js"></script>
 
     </body>
 </html>
